--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
  * dendenmushi
  *
  */
+ /* typography */
+
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
 
  /* font */
 
@@ -119,6 +122,10 @@ i.fa.fa-power-off {
 	padding-right: 7px;
 }
 
+i.fa.fa-user-md {
+	padding-right: 10px;
+}
+
 nav > div > div > ul > li > a {
 	font-size: 18px;
 	letter-spacing: 0.5px;
@@ -228,8 +235,9 @@ nav > div > div > ul > li > a:hover {
 .sched-h,
 .clinic-h,
 .doctor-h {
-	margin: 30px 0 50px 0;
-	font-size: 18px;
+	font-family: 'Montserrat', sans-serif;
+	margin: 30px 0 35px 0;
+	font-size: 24px;
 	text-transform: uppercase;
 }
 
@@ -716,16 +724,6 @@ nav > div > div > ul > li > a:hover {
 	line-height: 24px;
 }
 
-.d-list {
-	padding: 0 0 5px 30px;
-	font-size: 16px;
-	line-height: 24px;
-}
-
-.d-list li:hover {
-	color: #000;
-}
-
 #doctor-info,
 #patient-info {
 	margin: 40px 0;
@@ -757,19 +755,51 @@ nav > div > div > ul > li > a:hover {
 	font-weight: 600;
 }
 
-.specialization label {
-	cursor: pointer;
-	font-weight: 600;
+.specialization {
+	text-align: center;
+	font-size: 18px;
 }
 
-.specialization label i {
-	color: #D35400;
+.specialization label {
+	margin-bottom: 0;
+	padding: 5px;
+	width: 100%;
+	cursor: pointer;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+.specialization label:hover {
+	background: #1ABC9C;
+	color: #ECF0F1;
+}
+
+.specialization:focus {
+	background: none;
+}
+
+.d-list {
+	background-color: #ECF0F1;
+	font-size: 14px;
+	font-weight: 600;
+	text-transform: uppercase;
+	text-align: left;
+	line-height: 1.5;
+}
+
+.d-list li a {
+	padding-left: 25px;
+	color: #1ABC9C !important;
+}
+
+.d-list li a:hover {
+	background-color: #95A5A6 !important;
+	color: #fff !important;
 }
 
 #clinics {
 	margin: 20px 0;
 	font-size: 14px;
-	color: #fff;
 }
 
 .clinic-box {
