--- a/css/styles.css
+++ b/css/styles.css
@@ -102,8 +102,9 @@ h1, h2, h3, h4 {
 	background-color: #fff !important;
 }
 
-.ecf0f1-bg {
-	background-color: #ecf0f1 !important;
+.e4e8e9-bg {
+	/* background-color: #ecf0f1 !important; */
+	background: #e4e8e9 url('../img/background_opcion2.jpg') repeat left top !important;
 }
 
 .text-turquoise {
@@ -234,7 +235,8 @@ nav > div > div > ul > li > a:hover {
 .appmnt-h,
 .sched-h,
 .clinic-h,
-.doctor-h {
+.doctor-h,
+.about-h {
 	font-family: 'Montserrat', sans-serif;
 	margin: 30px 0 35px 0;
 	font-size: 24px;
@@ -445,7 +447,7 @@ nav > div > div > ul > li > a:hover {
 
 .usr-login {
 	position: relative;
-	padding: 24px 23px 20px;
+	padding: 10px;
 	background-color: transparent;
 	border-radius: 6px;
 }
@@ -556,6 +558,15 @@ nav > div > div > ul > li > a:hover {
 	border-color: #E67E22;
 }
 
+.login-modal-btn {
+	margin-top: 10px;
+	background: #16A085 !important;
+	color: #fff;
+	font-size: 12px;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
 .btn-default.create-btn {
 	width: 100%;
 	padding: 10px 19px;
@@ -572,7 +583,7 @@ nav > div > div > ul > li > a:hover {
 
 #index-frw {
 	height: 305px;
-	background: url('../img/beng-labs.jpg') no-repeat;
+	background: url('../img/beng-labs.png') no-repeat;
 	margin:	10px 0 40px 0;
 }
 
@@ -631,6 +642,13 @@ nav > div > div > ul > li > a:hover {
 
 #about {
 	margin: 50px 0;
+}
+
+.company-profile {
+	padding: 20px 40px;
+	font-size: 14px;
+	-webkit-columns: 100px 2;
+	-moz-columns: 100px 2;
 }
 
 .about-icons img {
@@ -821,4 +839,11 @@ nav > div > div > ul > li > a:hover {
 }
 
 #notification {
+}
+
+footer {
+}
+
+.footer-links {
+	padding: 10px;
 }
