--- a/css/styles.css
+++ b/css/styles.css
@@ -245,11 +245,16 @@ nav > div > div > ul > li > a:hover {
 	background-color: #2C3E50;
 }
 
-.row-header {
+.row-header,
+.row-header2 {
 	font-family: 'Montserrat', sans-serif;
 	margin: 30px 0 35px 0;
 	font-size: 24px;
 	text-transform: uppercase;
+}
+
+.row-header2 {
+	color: #95A5A6;
 }
 
 .notif-h {
@@ -767,7 +772,7 @@ nav > div > div > ul > li > a:hover {
 
 #doctor-info,
 #patient-info {
-	margin: 40px 0;
+	margin: 20px 0;
 	color: #ECF0F1;
 	font-size: 14px;
 }
@@ -787,13 +792,29 @@ nav > div > div > ul > li > a:hover {
 
 .d-info ul,
 .p-info ul {
+	margin: 10px 0;
 	list-style: none;
-}
-
-.d-info .specs,
-.p-info .specs {
 	text-transform: uppercase;
 	font-weight: 600;
+}
+
+.p-info ul i,
+.d-info ul i {
+	padding-right: 10px;
+}
+
+.p-info ul li,
+.d-info ul li {
+	margin: 0 10px;
+	padding: 0 10px;
+}
+
+.p-info ul li:hover,
+.d-info ul li:hover {
+	background: #34495E;
+}
+.email {
+	text-transform: lowercase;
 }
 
 .specialization {
