--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,10 @@ nav > div > div > ul > li > a:hover {
 	background-color: #fff;
 }
 
+.user-md {
+
+}
+
 .circle {
 	height: 90px;
 	width: 90px;
@@ -431,7 +435,7 @@ nav > div > div > ul > li > a:hover {
 }
 
 .user-md h1 {
-	font-size: 24px;
+	font-size: 20px;
  }
 
 .user-md span, .user-md p {
@@ -443,8 +447,10 @@ nav > div > div > ul > li > a:hover {
 }
 
 .user-md p {
-	margin-top: 10px;
-	line-height: 1.3;
+	  margin-top: 10px;
+	  line-height: 1;
+	  font-size: 12px;
+	  text-transform: uppercase;
 }
 
 #schedules-md {
@@ -824,7 +830,7 @@ nav > div > div > ul > li > a:hover {
 	background: #34495E;
 }
 .email {
-	text-transform: lowercase;
+	text-transform: lowercase !important;
 }
 
 .specialization-header {
@@ -893,6 +899,11 @@ nav > div > div > ul > li > a:hover {
 	color: rgb(212, 93, 14);
 	text-align: center;
 	text-transform: uppercase;
+}
+
+.clinic-box p {
+	color: #fff;
+	line-height: 12px;
 }
 
 .hide {
