landing page changes + doctor refer fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -591,7 +591,7 @@ nav > div > div > ul > li > a:hover {
 
 #index-frw {
 	height: 305px;
-	background: url('../img/beng-labs.jpg') no-repeat;
+	background: url('../img/benguet-laboratory-view.jpg') no-repeat;
 	margin:	10px 0 40px 0;
 }
 
