--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ nav > div > div > ul > li > a:hover {
 
 .appointment-date {
 	margin: 0;
-	font-size: 18px !important;
+	font-size: 16px !important;
 	font-weight: 600 !important;
 }
 
@@ -263,18 +263,23 @@ nav > div > div > ul > li > a:hover {
 	text-transform: lowercase;
 }
 
-.row-header2,
-.row-header2,
-.row-header-lc,
-.row-header-fff {
-	font-family: 'Lato', sans-serif;
-	margin: 30px 0 35px 0;
-	font-size: 24px;
+.row-header,
+.row-header2 {
+	margin: 25px 0px;
 	text-transform: uppercase;
+	font-size: 20px;
+}
+
+.row-header-lc,
+.row-header-fff,
+.row-header2-fff {
+	margin: 25px 0px;
+	font-size: 18px;
+ 	text-transform: uppercase;
 }
 
 .row-header2 {
-	color: #95A5A6;
+	text-transform: none;
 }
 
 .row-header-lc {
@@ -282,11 +287,16 @@ nav > div > div > ul > li > a:hover {
 }
 
 .row-header-fff {
+ 	color: #ECF0F1;
+ 	font-size: 18px;
+ }
+
+.row-header2-fff {
 	color: #ECF0F1;
-	font-size: 18px;
+	text-transform: none;
 }
 
-.notif-h {
+.date-header {
 	padding-left: 20px;
 	color: #ECF0F1;
 	font-size: 18px;
@@ -328,6 +338,12 @@ nav > div > div > ul > li > a:hover {
 	transition: 0.4s;
 }
 
+.panel-heading span {
+	padding-left: 20px;
+	position: absolute;
+	left: 10px;
+}
+
 .x-btn {
 	top: 4px !important;
 }
@@ -359,8 +375,8 @@ nav > div > div > ul > li > a:hover {
 }
 
 .panel-notif > .panel-body {
-	padding: 10px 20px;
-	font-size: 16px;
+	padding: 10px 15px;
+	font-size: 14px;
 }
 
 .panel-notif.panel-success {
@@ -751,7 +767,7 @@ nav > div > div > ul > li > a:hover {
 .login-link {
 	display: block;
 	margin-top: 15px;
-	font-size: 16px;
+	font-size: 12px;
 	color: #7F8C8D !important;
 	text-align: center;
 }
@@ -952,7 +968,7 @@ nav > div > div > ul > li > a:hover {
 
 .p-info ul li:hover,
 .d-info ul li:hover {
-	background: #34495E;
+	color: #1ABC9C;
 }
 
 .d-info span {
