--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,10 @@ nav > div > div > ul > li > a:hover {
 	border-bottom: none;
 }
 
+.navbar-nav i {
+	padding-right: 6px;
+}
+
 .navbar-default{
 	padding-left: 15px;
 	padding-right: 15px;
@@ -207,6 +211,11 @@ nav > div > div > ul > li > a:hover {
 	background-color: #fff;
 	border: 2px solid #bdc3c7;
 	border-left: 0;
+}
+
+button i {
+	padding-left: 6px;
+	padding-right: 0px !important;
 }
 
 .signedin {
@@ -740,14 +749,17 @@ nav > div > div > ul > li > a:hover {
 	margin:	10px 0 40px 0;
 }
 
-.more-btn a {
+.more-btn {
 	margin: 20px;
+	font-size: 15px;
 	font-weight: 600;
 }
 
- {
-
+.more-btn:hover {
+  color: #D35400 !important;
+  text-decoration: none;
 }
+
 .login-text {
 	padding: 190px 50px 0 40px;
 	color: #ECF0F1;
@@ -815,8 +827,9 @@ nav > div > div > ul > li > a:hover {
 	font-weight: 600;
 }
 
-.company-profile-img {
-	margin-top: 15px;
+.company-profile-img img {
+	margin-top: 30px;
+	box-shadow: 0 0 0 10px hsl(0, 0%, 70%), 0 0 0 15px hsl(0, 0%, 80%);
 }
 
 .about-icons img {
