--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,8 @@ nav > div > div > ul > li > a:hover {
 }
 
 .row-header,
-.row-header2 {
+.row-header2,
+.row-header3 {
 	margin: 25px 0px;
 	text-transform: uppercase;
 	font-size: 20px;
@@ -285,6 +286,10 @@ nav > div > div > ul > li > a:hover {
 
 .row-header2 {
 	text-transform: none;
+}
+
+.row-header3 {
+	margin: 12px 0px;
 }
 
 .row-header-lc {
@@ -978,6 +983,9 @@ nav > div > div > ul > li > a:hover {
 }
 
 .upload-photo .img-responsive {
+	height: 128px;
+	width: 128px;
+	margin: 0 auto;
 	border: 10px solid #7F8C8D;
 	border-radius: 50%;
 }
