--- a/css/styles.css
+++ b/css/styles.css
@@ -530,9 +530,10 @@ nav > div > div > ul > li > a:hover {
 #schedules-md {
 }
 
-.sched-panel {
+.sched-panel,
+.dc-profile-sched-panel {
 	border: 2px solid transparent;
-	background-color: rgba(236, 240, 241, 0.3);
+	background-color: rgba(236, 240, 241, 0.3) !important;
 }
 
 .sched-panel .panel-body,
@@ -549,6 +550,33 @@ nav > div > div > ul > li > a:hover {
 
 .sched-h {
 	color: #2C3E50;
+}
+
+.dc-profile-sched-panel {
+	border: 2px solid #7F8C8D !important;
+}
+
+.dc-profile-sched-panel h2,
+.dc-profile-sched-panel span,
+.dc-profile-sched-panel p {
+	color: #34495E !important;
+}
+
+.dc-profile-sched-panel i {
+	padding-right: 5px;
+}
+
+
+.remarks textarea {
+	resize: none;
+}
+
+.remarks select {
+	height: 38px;
+}
+
+.remarks .form-control {
+	margin-bottom: 10px;
 }
 
 .usr-login {
@@ -718,6 +746,7 @@ nav > div > div > ul > li > a:hover {
 .export-btn,
 .edit-profile-btn {
 	margin-top: 10px;
+	margin-left: 10px;
 	background: #16A085 !important;
 	color: #fff;
 	font-size: 12px;
@@ -988,10 +1017,6 @@ nav > div > div > ul > li > a:hover {
 	border-radius: 50%;
 }
 
-#patient-info img {
-	border: 8px solid #D35400 !important;
-}
-
 .patient-activity {
 	padding-bottom: 25px;
 	background: rgba(44, 62, 80, 0.8);
@@ -1039,11 +1064,6 @@ nav > div > div > ul > li > a:hover {
 .d-info ul li {
 	margin: 0 10px;
 	padding: 0 10px;
-}
-
-.p-info ul li:hover,
-.d-info ul li:hover {
-	color: #1ABC9C;
 }
 
 .d-info span {
