--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -53,15 +53,25 @@ body {
 }
 
 /* Sidebar navigation */
-.nav-sidebar {
+.nav-sidebar,
+.main-nav-label {
   margin-right: -21px; /* 20px padding + 1px border */
   margin-bottom: 20px;
   margin-left: -20px;
 }
-.nav-sidebar > li > a {
+
+.nav-sidebar > li > a,
+.nav-sidebar > li label {
   color: #3498DB !important;
   padding-right: 20px;
   padding-left: 20px;
+}
+
+.nav-sidebar > li label {
+  cursor: pointer;
+  color: #7F8C8D !important;
+  text-transform: uppercase;
+  font-size: 12px;
 }
 
 .nav-sidebar > li > a:hover {
