Revert "random changes - 3/30/2015"
This reverts commit 06567fe2f9a0a0cab37a3377b95fe84fa071d561.

--- a/css/styles.css
+++ b/css/styles.css
@@ -216,15 +216,21 @@ nav > div > div > ul > li > a:hover {
 }
 
 .signedin {
-	text-align: center;
+	margin-top: 5px;
 }
 
 .signedin button {
-	margin: 0;
-	padding: 9px 0;
-	color: #16a085;
 	font-size: 16px;
-	line-height: 32px;
+	margin-left: 10px;
+	float: none !important;
+}
+
+.signedin button i {
+  padding-right: 7px;
+}
+
+.signedin .btn-noborder {
+	color: #16a085;
 }
 
 .signedin .btn-noborder:hover,
@@ -242,9 +248,11 @@ nav > div > div > ul > li > a:hover {
 }
 
 .signedin-photo img {
-	height: 34px;
+	height: 24px;
 	border-radius: 50%;
 }
+
+
 
 .badge {
 	padding: 2px 7px;
