--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -7,13 +7,13 @@
 }
 
 .main-nav-label:first-child {
-	
+	border-top: 1px solid #95A5A6;
 }
 
 .sidebar-list {
 	padding-top: 10px;
 	padding-bottom: 6px;
-	 border-bottom: 1px solid #95A5A6;
+	border-bottom: 1px solid #95A5A6;
 }
 
 .sidebar-items-list {
