i love you ZAYN <3

--- a/css/styles.css
+++ b/css/styles.css
@@ -591,7 +591,8 @@ nav > div > div > ul > li > a:hover {
 	resize: none;
 }
 
-.remarks select {
+.remarks select,
+.refer-modal select {
 	height: 38px;
 }
 
