--- a/css/styles.css
+++ b/css/styles.css
@@ -649,7 +649,7 @@ nav > div > div > ul > li > a:hover {
 	top: 13px;
 	right: 15px;
 	color: #95A5A6;
-	border-right: ;0
+	border-right: ;
 	-webkit-transition: all .25s;
 			transition: all .25s;
 }
