patient module fix part 2

--- a/css/styles.css
+++ b/css/styles.css
@@ -385,7 +385,7 @@ nav > div > div > ul > li > a:hover {
 
 .panel-default .panel-body p {
 	font-size: 12px;
-	line-height: 1.5; 
+	line-height: 10px; 
 }
 
 .panel-notif {
