doctor schedules module fix part 1

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,8 @@ i.fa.fa-power-off {
 
 i.fa.fa-user-md,
 i.fa.fa-location-arrow,
-i.fa.fa-phone {
+i.fa.fa-phone,
+i.fa.fa-calendar {
 	padding-right: 10px;
 }
 
