--- a/css/search.css
+++ b/css/search.css
@@ -7,16 +7,16 @@
 
 .divResult > li > a,
 .divResult > li > p {
-  text-transform: uppercase;
     text-transform: uppercase;
-  font-size: 12px;
-  font-weight: 600;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
 }
 
 .divResult > li > p {
-  padding: 0 20px;
-  font-style: italic;
-  font-size: 12px;
-  font-weight: 600;
-  text-transform: none;
+    padding: 0 0 0 35px;
+    font-style: italic;
+    font-size: 12px;
+    font-weight: 600;
+    text-transform: none;
 }
